profilelist1exp/unpackaged/objects/Calendar_Management__c.object
<CustomObject>
    <description>BOLT &amp; GSL project</description>
    <fields>
        <fullName>Applies_to_Other_Rooms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applies to Multiple Rooms?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CE_Event_Type__c</fullName>
        <formula>TEXT( Customer_Engagement_Event__r.Event_Type__c )</formula>
        <label>CE Event Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CE_Record_Type__c</fullName>
        <formula>Customer_Engagement_Event__r.RecordTypeId</formula>
        <label>CE Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar_Management_Record_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Record ID</label>
        <referenceTo>Calendar_Management__c</referenceTo>
        <relationshipLabel>Calendar Management Secondary</relationshipLabel>
        <relationshipName>Calendar_Management_Secondary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Engagement_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Engagement Event</label>
        <referenceTo>Customer_Engagement__c</referenceTo>
        <relationshipLabel>Calendar Management</relationshipLabel>
        <relationshipName>Calendar_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>Event End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Record_type__c</fullName>
        <label>Event Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Half_Day__c</fullName>
        <label>Half Day?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Whole Day</fullName>
                </value>
                <value>
                    <fullName>AM: 12 AM – 11:59 AM</fullName>
                </value>
                <value>
                    <fullName>PM: 12 PM – 11:59 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <defaultValue>&quot;Once the site is changed, All the existing Secondary Calendar Management Records will be deleted permanently&quot;</defaultValue>
        <label>&lt;font color=&quot;#FF0000&quot;&gt; Please Note:</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Put_on_24_hr_block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Put on 24 hr block?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT(Site__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Room</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Event_Location__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Rooms</value>
            </filterItems>
            <filterItems>
                <field>Event_Location__c.Select_Site__c</field>
                <operation>equals</operation>
                <valueField>$Source.Site__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Event_Location__c</referenceTo>
        <relationshipLabel>Calendar Management</relationshipLabel>
        <relationshipName>Calendar_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Event_Location__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Sites</value>
            </filterItems>
            <filterItems>
                <field>Event_Location__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Event_Location__c</referenceTo>
        <relationshipLabel>Calendar Management (Site)</relationshipLabel>
        <relationshipName>Calendar_Management_Site</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Waitlisted</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Holiday</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tour__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tour</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Event_Location__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Tours</value>
            </filterItems>
            <filterItems>
                <field>Event_Location__c.Select_Site__c</field>
                <operation>equals</operation>
                <valueField>$Source.Site__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Event_Location__c</referenceTo>
        <relationshipLabel>Calendar Management (Tour)</relationshipLabel>
        <relationshipName>Calendar_Management1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Webcast__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Webcast</label>
        <type>Checkbox</type>
    </fields>
    <label>Calendar Management</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CM-{00000000}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calendar Management</pluralLabel>
    <recordTypes>
        <fullName>Primary_Calendar_RT</fullName>
        <active>true</active>
        <description>Primary RT is used for all Calendar bookings - to block single day event and to block the first day for multiple day events</description>
        <label>Primary Calendar RT</label>
    </recordTypes>
    <recordTypes>
        <fullName>Secondary_Calendar_RT</fullName>
        <active>true</active>
        <description>Secondary RT is used ONLY for multiple day events - with the first day of the event blocked as a Primary RT and the rest as Secondary RT related to it</description>
        <label>Secondary Calendar RT</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>